# HugoMega

./: .gitignore  CMakeLists.txt  Makefile  README.md  SDL2_static.h  compile.bat  hugomain.cpp  localfolder.hpp  pixelset.hpp
formats/: cgf.hpp  font.hpp  lzp.hpp  oos.hpp  pal.hpp  raw.hpp  til.hpp  txt.hpp  wav.hpp
games/laby/: start.hpp  step1.hpp
intro/: intro.hpp
menu/: hiscore.hpp  menu.hpp  options.hpp
